@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed menu item counting issue in Fluid (STR #2322)
+	- Added Fl_Menu_::find_item by callback
 	- Removed redundant Fl_Group casts
 	- Added indexing to Fl_Preferences
 	- Integrated default menu into Demo test app
